# amino

./: .gitignore  ABNF_VALIDATION_PLAN.md  DEVELOPMENT.md  FUNCTION_SYNTAX_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASES.md  README.md  amino.abnf  amino.py  example.amn  examples.py  grammar.abnf  parser.py  pyproject.toml  runtime.py  setup.py  type_system.py
.claude/: settings.local.json
.claude/agents/: api-designer.md  dsl-designer.md  parser-dev.md  performance-engineer.md  test-engineer.md  type-system-architect.md
amino/: __init__.py  compiler.py  core.py  engine.py  errors.py  parser.py  rule_parser.py  schema_parser.py
amino/core/: __init__.py  runtime.py
amino/operators/: registry.py  standard.py
amino/parser/: rules.py  rules_grammar.abnf  schema.py
amino/rules/: __init__.py  ast.py  compiler.py  optimizer.py  parser.py
amino/runtime/: __init__.py  compiled_rules.py  compiler_old.py  engine.py  evaluator.py  matcher.py  validator.py
amino/schema/: __init__.py  ast.py  parser.py  parser_old.py  registry.py  (+2 more)
design_docs/: CONSTRAINTS_DESIGN.md  STRUCT_TYPES_DESIGN.md  optional_types_design.md  optionals.md  structs_as_types.md
docs/: README.md  api.md  architecture.md  rule-expression.md  schema-language.md
examples/: README.md  validate_examples.py
scripts/: validate_abnf.py
tests/: conftest.py  test_advanced_schema_features.py  test_amino_api.py  test_basic.py  test_compiled_rules.py  test_compiler.py  test_decision_validator.py  test_engine.py  test_errors.py  test_integration.py  test_matcher.py  test_operators.py  test_rule_ast.py  test_rule_parser.py  test_rules_optimizer.py  test_runtime.py  test_runtime_evaluator.py  test_schema_ast.py  test_schema_parser.py  test_schema_registry.py  test_schema_validator.py  test_type_system.py  test_types.py  test_types_builtin.py  test_types_registry.py  test_types_validation.py  test_utils_helpers.py  tests_rule_parser.py  tests_schema_parser.py
(+32 files in other folders)
